@@ -116,6 +116,7 @@
 - rfe #1105678 [interface] Drop page-break-before as it is useless for smaller
   tables.
 - rfe #2956556 [interface] Allow to wrap enum values.
+- bug #1669459 [interface] Do not automatically mark PDF schema rows to delete
 
 3.3.8.0 (not yet released)
 - bug #3059311 [import] BIGINT field type added to table analysis
